# KW--4

./: .gitignore  README.md  main.py  pyproject.toml
data/: settings_path.py  vacancies.json
src/: class_load_HH.py  class_other.py  utils.py
